<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_config"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/mao_hashi"
        android:scaleType="fitCenter"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_easy"
        app:backgroundTint="#5ce1e6"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_medium"
        app:backgroundTint="#2da1eb"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="#005da0"
        android:text="@string/btn_hard"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/txtHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Melhor Pontuação: 0"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
